manifests/vaultwarden/deploy-vaultwarden.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    matchLabels:
      app: vaultwarden
  replicas: 1
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.33.2-alpine
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
          ports:
            - containerPort: 80
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-data
